Textures/Lang edits
Added textures

--- a/src/main/resources/assets/occult/lang/en_us.json
+++ b/src/main/resources/assets/occult/lang/en_us.json
@@ -1,5 +1,8 @@
 {
-  "block.occult.ajkar":"Deep Grass",
+  "block.occult.ajkar":"Akjar",
+  "block.occult.beating_ajkar":"Beating Akjar",
+  "block.occult.ajkar_bricks":"Akjar Bricks",
+  "block.occult.beating_ajkar_bricks":"Beating Akjar Bricks",
   "block.occult.cinnabar_ore":"Cinnabar Ore",
   "block.occult.salt_ore":"Salt Ore",
   "block.occult.crucible":"Crucible",
@@ -8,15 +11,15 @@
   "block.occult.sacred_salt_block":"Sacred Salt Block",
   "block.occult.sulphur_block":"Sulphur Block",
   "block.occult.amalgam_block":"Amalgam Block",
-  "block.occult.sated_lionmetal_block":"LionMetal Block",
-  "block.occult.hungry_lionmetal_block":"LionMetal Block",
+  "block.occult.sated_lionmetal_block":"Lionmetal Block",
+  "block.occult.hungry_lionmetal_block":"Lionmetal Block",
 
   "item.occult.amalgam_nugget":"Amalgam Nugget",
   "item.occult.amalgam_ingot":"Amalgam Ingot",
-  "item.occult.hungry_lionmetal_nugget":"LionMetal Nugget",
-  "item.occult.hungry_lionmetal_ingot":"LionMetal Ingot",
-  "item.occult.sated_lionmetal_nugget":"LionMetal Nugget",
-  "item.occult.sated_lionmetal_ingot":"LionMetal Ingot",
+  "item.occult.hungry_lionmetal_nugget":"Lionmetal Nugget",
+  "item.occult.hungry_lionmetal_ingot":"Lionmetal Ingot",
+  "item.occult.sated_lionmetal_nugget":"Lionmetal Nugget",
+  "item.occult.sated_lionmetal_ingot":"Lionmetal Ingot",
 
   "item.occult.sacred_salt":"Sacred Salt",
   "item.occult.salt":"Salt",
