Datagen Assets + Textures

--- a/src/main/resources/assets/occult/lang/en_us.json
+++ b/src/main/resources/assets/occult/lang/en_us.json
@@ -9,6 +9,9 @@
   "item.occult.hungry_lionmeta_nugget": "Hungry Lionmeta Nugget",
   "item.occult.hungry_lionmetal_ingot": "Hungry Lionmetal Ingot",
   "item.occult.lionmetal_ingot": "Lionmetal Ingot",
+  "item.occult.pressure_add": "Pressure Add",
+  "item.occult.pressure_checker": "Pressure Checker",
+  "item.occult.pressure_remove": "Pressure Remove",
   "item.occult.quicksilver": "Quicksilver",
   "item.occult.sated_lionmetal_ingot": "Sated Lionmetal Ingot",
   "item.occult.sated_lionmetal_nugget": "Sated Lionmetal Nugget"
