--- a/src/main/resources/assets/occult/lang/en_us.json
+++ b/src/main/resources/assets/occult/lang/en_us.json
@@ -1,17 +1,13 @@
 {
-  "block.occult.ajkar": "Ajkar",
+  "block.occult.akjar": "Akjar",
   "block.occult.amalgam_block": "Amalgam Block",
   "block.occult.crucible": "Crucible",
   "block.occult.hungry_lionmetal_block": "Hungry Lionmetal Block",
   "block.occult.sated_lionmetal_block": "Sated Lionmetal Block",
   "item.occult.amalgam_ingot": "Amalgam Ingot",
   "item.occult.amalgam_nugget": "Amalgam Nugget",
-  "item.occult.hungry_lionmeta_nugget": "Hungry Lionmeta Nugget",
   "item.occult.hungry_lionmetal_ingot": "Hungry Lionmetal Ingot",
-  "item.occult.lionmetal_ingot": "Lionmetal Ingot",
-  "item.occult.pressure_add": "Pressure Add",
-  "item.occult.pressure_checker": "Pressure Checker",
-  "item.occult.pressure_remove": "Pressure Remove",
+  "item.occult.hungry_lionmetal_nugget": "Hungry Lionmetal Nugget",
   "item.occult.quicksilver": "Quicksilver",
   "item.occult.sated_lionmetal_ingot": "Sated Lionmetal Ingot",
   "item.occult.sated_lionmetal_nugget": "Sated Lionmetal Nugget"
