Tool Models, Armor Models, assets

--- a/src/datagen/resources/assets/occult/lang/en_us.json
+++ b/src/datagen/resources/assets/occult/lang/en_us.json
@@ -2,15 +2,33 @@
   "block.occult.akjar": "Akjar",
   "block.occult.amalgam_block": "Amalgam Block",
   "block.occult.crucible": "Crucible",
-  "block.occult.hungry_lionmetal_block": "Hungry Lionmetal Block",
   "block.occult.satiated_lionmetal_block": "Satiated Lionmetal Block",
   "block.occult.sulphur_block": "Sulphur Block",
   "item.occult.amalgam_ingot": "Amalgam Ingot",
   "item.occult.amalgam_nugget": "Amalgam Nugget",
+  "item.occult.hungry_lionmetal_axe": "Hungry Lionmetal Axe",
+  "item.occult.hungry_lionmetal_boots": "Hungry Lionmetal Boots",
+  "item.occult.hungry_lionmetal_chest": "Hungry Lionmetal Chest",
+  "item.occult.hungry_lionmetal_helm": "Hungry Lionmetal Helm",
+  "item.occult.hungry_lionmetal_hoe": "Hungry Lionmetal Hoe",
   "item.occult.hungry_lionmetal_ingot": "Hungry Lionmetal Ingot",
+  "item.occult.hungry_lionmetal_legs": "Hungry Lionmetal Legs",
   "item.occult.hungry_lionmetal_nugget": "Hungry Lionmetal Nugget",
+  "item.occult.hungry_lionmetal_shield": "Hungry Lionmetal Shield",
+  "item.occult.hungry_lionmetal_shovel": "Hungry Lionmetal Shovel",
+  "item.occult.hungry_lionmetal_sword": "Hungry Lionmetal Sword",
+  "item.occult.pearlash": "Pearlash",
   "item.occult.quicksilver": "Quicksilver",
+  "item.occult.satiated_lionmetal_axe": "Satiated Lionmetal Axe",
+  "item.occult.satiated_lionmetal_boots": "Satiated Lionmetal Boots",
+  "item.occult.satiated_lionmetal_chest": "Satiated Lionmetal Chest",
+  "item.occult.satiated_lionmetal_helm": "Satiated Lionmetal Helm",
+  "item.occult.satiated_lionmetal_hoe": "Satiated Lionmetal Hoe",
   "item.occult.satiated_lionmetal_ingot": "Satiated Lionmetal Ingot",
+  "item.occult.satiated_lionmetal_legs": "Satiated Lionmetal Legs",
   "item.occult.satiated_lionmetal_nugget": "Satiated Lionmetal Nugget",
+  "item.occult.satiated_lionmetal_shield": "Satiated Lionmetal Shield",
+  "item.occult.satiated_lionmetal_shovel": "Satiated Lionmetal Shovel",
+  "item.occult.satiated_lionmetal_sword": "Satiated Lionmetal Sword",
   "itemGroup.occult": "Occult"
 }
